fix: min-hein of mobileScrollbar thumb

--- a/src/styles/vsb.scss
+++ b/src/styles/vsb.scss
@@ -75,6 +75,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    min-height: 30px;
     width: 100%;
     cursor: pointer;
     background: #888;
